Need to remove `setForeground` to show notifications. Periodic work only gets enqueued every 15 minutes, should replace with 5 minute single work calls.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">UpdatesTracker</string>
     <string name="add_to_tracker_text">Add to tracker</string>
     <string name="address_suggestion_text">https://google.com</string>
+    <string name="last_checked">Last checked:</string>
+    <string name="last_updated">Last updated:</string>
 </resources>
