Move delete to dropdown; no actions on other buttons yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="edit_title_text">Edit entry title</string>
     <string name="delete_text">Delete entry</string>
     <string name="change_position">Change entry position</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
